@@ -1,3 +1,12 @@
+2004-08-07  Danilo Šegan  <dsegan@gmx.net>
+
+	Fixes bug #149518.
+	
+	* gconf/gconftool.c (options): s/dir/directory/ s/standard out/standard output/.
+	* gconf/gconfd.c (main): s/fd/file descriptor/.
+	* gconf/gconf-sources.c (gconf_sources_new_from_addresses): s/config/configuration/.
+	* backends/markup-tree.c (parse_value_element): s/car_type/first-element/.
+
 2004-08-03  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-release bump to 2.7.91.
